drone/templates/drone-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner-ssh
  labels:
    app: drone-runner
    type: ssh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-runner
      type: ssh
  template:
    metadata:
      labels:
        app: drone-runner
        type: ssh
    spec:
      containers:
      - name: runner
        image: drone/drone-runner-ssh:latest
        ports:
        - containerPort: 3000
      nodeSelector:
        node: master

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner-kube
  labels:
    app: drone-runner
    type: kube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-runner
      type: kube
  template:
    metadata:
      labels:
        app: drone-runner
        type: kube
    spec:
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
      nodeSelector:
        node: master
