drone/templates/drone.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      nodeSelector:
        node: master
      containers:
      - name: drone
        image: drone/drone:1
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
          - mountPath: /data
            name: drone-volume
      volumes:
      - name: drone-volume
        hostPath:
          path: /var/lib/drone
          type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: default
spec:
  selector:
    app: drone
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: https
    port: 443
    targetPort: 443

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: default-ingress
  namespace: default
spec:
  rules:
    - host: tokyo.sshcloud.wang
      http:
        paths:
          - backend:
              serviceName: drone
              servicePort: 80
            path: /
  tls:
      - hosts:
          - tokyo.sshcloud.wang
        secretName: tokyo.sshcloud.wang-tls
