drone/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: default-ingress
  namespace: default
spec:
  rules:
    - host: tokyo.sshcloud.wang
      http:
        paths:
          - backend:
              serviceName: drone
              servicePort: 80
            path: /
  tls:
      - hosts:
          - tokyo.sshcloud.wang
        secretName: tokyo.sshcloud.wang-tls
